infra/jetkvm-recovery/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jetkvm-recovery-route
  namespace: jetkvm-recovery
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "jetkvm-recovery.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jetkvm
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
# Locked to YOUR public IP only. Default Deny, single Allow.
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jetkvm-recovery-allow
  namespace: jetkvm-recovery
spec:
  targetRefs:
    - group: "gateway.networking.k8s.io"
      kind: HTTPRoute
      name: jetkvm-recovery-route
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 80.233.47.107/32
